--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <meta name="description" content="Submit your research papers for publication consideration" />
     <meta name="author" content="Anna University" />
     
-    <link rel="icon" href="/lovable-uploads/cc7dfcca-5750-4f88-9b73-4693e619e400.png" type="image/png">
+    <link rel="icon" href="/logo.png" type="image/png">
 
     <meta property="og:title" content="Anna University - Paper Submission" />
     <meta property="og:description" content="Submit your research papers for publication consideration" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/lovable-uploads/cc7dfcca-5750-4f88-9b73-4693e619e400.png" />
+    <meta property="og:image" content="/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@anna_university" />
-    <meta name="twitter:image" content="/lovable-uploads/cc7dfcca-5750-4f88-9b73-4693e619e400.png" />
+    <meta name="twitter:image" content="/logo.png" />
   </head>
 
   <body>
